--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -1,3 +1,55 @@
-appTitle=br.com.switch.farmtenz
-appDescription=UI5 Application br.com.switch.farmtenz
-btnText=Say Hello
+appTitle=Salestem
+appDescription=Salestem
+title=Salestem
+
+# FORM
+form.email=Email
+form.password=Password
+form.createAccount=Create Account
+
+form.username=Username
+form.confirmPasswordError=Passwords do not match
+
+form.emailInvalid=Invalid email address
+form.usernameInvalid=Nome de Usu\u00E1rio inv\u00E1lido, deve conter no m\u00EDnimo 3 caracteres
+form.passwordInvalid=Invalid password, must contain at least 8 characters
+
+form.emailRequired=Email is required
+form.usernameRequired=Username is required
+form.passwordRequired=Password is required
+form.confirmPasswordRequired=Confirm Password is required
+
+# REGISTER FORM
+register.title=Register
+register.confirmPassword=Confirm Password
+register.haveAccount=Already have an account?
+register.loginAccount=Login to my account
+register.subTitle=Please fill in the fields below to create your account.
+
+# BUTTONS
+btnConfigurations=Configurations
+btnLogout=Logout
+btnChangeTheme=Change Theme
+
+# NOTFOUND PAGE
+notFound=Not Found
+notFound.text=Sorry, but the requested resource is not available.
+notFound.description=Please check the URL and try again.
+notFound.btnBack=Back to login page
+
+# ACESS DENIED
+accessDenied=Access Denied
+accessDenied.text=Sorry, but you do not have permission to access this page.
+accessDenied.description=Please check the URL and try again.
+
+# LOGIN PAGE
+login.btnLogin=Login
+login.rememberMe=Remember me
+login.forgotPassword=Forgot your password?
+login.loginTitle=Login
+login.subTitle=To enter the system, login with your email and password.
+login.dontHaveAccount=Don't have an account?
+
+# SIDE NAVIGATION
+sideNavigationToggleButtonTooltipCollapsed=Expand menu 
+sideNavigationToggleButtonTooltipExpanded=Collapse menu
