Adicionando um Dialog de configurações

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -19,6 +19,18 @@ form.usernameRequired=Username is required
 form.passwordRequired=Password is required
 form.confirmPasswordRequired=Confirm Password is required
 
+# PANEL CONFIGURATIONS
+lblThemeDark=Dark Theme
+lblThemeLight=Light Theme
+lblThemeSystem=System Theme
+lblTheme=Choose a theme
+lblLanguageSystem=System Language
+lblLanguage=Choose a language
+lblLanguagePortuguese=Portuguese
+lblLanguageEnglish=English
+titlePanelConfigurationsApp=System Preferences
+
+
 # REGISTER FORM
 register.title=Register
 register.confirmPassword=Confirm Password
@@ -29,7 +41,10 @@ register.subTitle=Please fill in the fields below to create your account.
 # BUTTONS
 btnConfigurations=Configurations
 btnLogout=Logout
-btnChangeTheme=Change Theme
+btnDownloadPWA=Install Salestem
+btnSave=Save
+btnClose=Close
+
 
 # NOTFOUND PAGE
 notFound=Not Found
@@ -51,5 +66,5 @@ login.subTitle=To enter the system, login with your email and password.
 login.dontHaveAccount=Don't have an account?
 
 # SIDE NAVIGATION
-sideNavigationToggleButtonTooltipCollapsed=Expand menu 
+sideNavigationToggleButtonTooltipCollapsed=Expand menu
 sideNavigationToggleButtonTooltipExpanded=Collapse menu
