--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -18,6 +18,18 @@ form.usernameRequired=Nome de Usu\u00E1rio \u00E9 obrigat\u00F3rio
 form.passwordRequired=Senha \u00E9 obrigat\u00F3ria
 form.confirmPasswordRequired=Confirma\u00E7\u00E3o de Senha \u00E9 obrigat\u00F3ria
 
+# PANEL CONFIGURATIONS
+lblThemeDark=Tema Escuro
+lblThemeLight=Tema Claro
+lblThemeSystem=Tema do Sistema
+lblTheme=Escolha um tema
+lblLanguageSystem=Idioma do Sistema
+lblLanguage=Escolha um idioma
+lblLanguagePortuguese=Portugu\u00EAs
+lblLanguageEnglish=Ingl\u00EAs
+titlePanelConfigurationsApp=Prefer\u00EAncias do Sistema
+
+
 # LOGIN
 login.btnLogin=Entrar
 login.rememberMe=Lembre de mim
@@ -36,7 +48,10 @@ register.loginAccount=Entrar na minha conta
 # BUTTONS
 btnConfigurations=Configura\u00E7\u00F5es
 btnLogout=Sair
-btnChangeTheme=Trocar tema
+btnDownloadPWA=Instalar o Salestem
+btnSave=Salvar
+btnClose=Fechar
+
 
 # NOTFOUND
 notFound=P\u00E1gina n\u00E3o encontrada
