Adicionando o conteúdo da primeira página e sua tabela com o Dialog de Sort

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -66,3 +66,18 @@ accessDenied.description=Verifique o URL e tente novamente.
 # SIDE NAVIGATION
 sideNavigationToggleButtonTooltipCollapsed=Expandir menu
 sideNavigationToggleButtonTooltipExpanded=Recolher menu
+sideBar.home=P\u00E1gina Inicial
+sideBar.chemicalComponents=Componentes Qu\u00EDmicos
+
+# MESSAGE BOX
+msgBox.invalidTokenTitle=Credenciais inv\u00E1lidas
+msgBox.invalidToken=Ocorreu um erro ao validar suas credenciais, por favor, fa\u00E7a o login novamente.
+
+# SEARCH FIELD
+searchField.placeholder=Filtre pelo nome ou f\u00F3rmula do componente
+
+# TABLE
+table.noData.chemicalComp=Sem Componentes Qu\u00EDmicos
+table.column.chemicalComp.name=Nome do Componente
+table.column.chemicalComp.formula=F\u00F3rmula
+clearAllFilters=Limpar todos os filtros
