--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -68,3 +68,18 @@ login.dontHaveAccount=Don't have an account?
 # SIDE NAVIGATION
 sideNavigationToggleButtonTooltipCollapsed=Expand menu
 sideNavigationToggleButtonTooltipExpanded=Collapse menu
+sideBar.home=Home
+sideBar.chemicalComponents=Chemical Components
+
+# MESSAGE BOX
+msgBox.invalidTokenTitle=Invalid credentials
+msgBox.invalidToken=Invalid credentials, please login again.
+
+# SEARCH FIELD
+searchField.placeholder=Filter by name or formula of the component
+
+# TABLE
+table.noData.chemicalComp=No Chemical Components
+table.column.chemicalComp.name=Name of the component
+table.column.chemicalComp.formula=Formula
+clearAllFilters=Clear all filters
