Refatorando o código e ajustando a tabela

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -51,6 +51,9 @@ btnLogout=Sair
 btnDownloadPWA=Instalar o Salestem
 btnSave=Salvar
 btnClose=Fechar
+btn.create.chemicalComp=Novo Componente Qu\u00EDmico
+btn.sort.table=Ordenar Por
+btn.filter.table=Filtrar Por
 
 # NOTFOUND
 notFound=P\u00E1gina n\u00E3o encontrada
@@ -74,10 +77,11 @@ msgBox.invalidTokenTitle=Credenciais inv\u00E1lidas
 msgBox.invalidToken=Ocorreu um erro ao validar suas credenciais, por favor, fa\u00E7a o login novamente.
 
 # SEARCH FIELD
-searchField.placeholder=Filtre pelo nome ou f\u00F3rmula do componente
+searchField.placeholder=Filtre pelo nome do Componente
 
 # TABLE
 table.noData.chemicalComp=Sem Componentes Qu\u00EDmicos
 table.column.chemicalComp.name=Nome do Componente
 table.column.chemicalComp.formula=F\u00F3rmula
 clearAllFilters=Limpar todos os filtros
+table.title.chemicalComp=Lista dos Componentes
