--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -30,7 +30,6 @@ lblLanguagePortuguese=Portuguese
 lblLanguageEnglish=English
 titlePanelConfigurationsApp=System Preferences
 
-
 # REGISTER FORM
 register.title=Register
 register.confirmPassword=Confirm Password
@@ -44,6 +43,9 @@ btnLogout=Logout
 btnDownloadPWA=Install Salestem
 btnSave=Save
 btnClose=Close
+btn.create.chemicalComp=New Chemical Component
+btn.sort.table=Order By
+btn.filter.table=Filter By
 
 
 # NOTFOUND PAGE
@@ -76,10 +78,12 @@ msgBox.invalidTokenTitle=Invalid credentials
 msgBox.invalidToken=Invalid credentials, please login again.
 
 # SEARCH FIELD
-searchField.placeholder=Filter by name or formula of the component
+searchField.placeholder=Filter by name of the Component
 
 # TABLE
 table.noData.chemicalComp=No Chemical Components
 table.column.chemicalComp.name=Name of the component
 table.column.chemicalComp.formula=Formula
 clearAllFilters=Clear all filters
+# table.title.chemicalComp=Lista de Componentes Qu\u00EDmicos
+table.title.chemicalComp=List of Components
