Implementando função para a criação de um novo componente químico

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -2,6 +2,9 @@ appTitle=Salestem
 appDescription=Salestem
 title=Salestem
 
+# GENERALS
+required.field=Required field
+
 # FORM
 form.email=Email
 form.password=Password
@@ -46,7 +49,9 @@ btnClose=Close
 btn.create.chemicalComp=New Chemical Component
 btn.sort.table=Order By
 btn.filter.table=Filter By
-
+btn.create=Create
+btn.save=Save
+btn.cancel=Cancel
 
 # NOTFOUND PAGE
 notFound=Not Found
@@ -84,6 +89,17 @@ searchField.placeholder=Filter by name of the Component
 table.noData.chemicalComp=No Chemical Components
 table.column.chemicalComp.name=Name of the component
 table.column.chemicalComp.formula=Formula
+table.column.chemicalComp.formaMedida=Measure form
 clearAllFilters=Clear all filters
 # table.title.chemicalComp=Lista de Componentes Qu\u00EDmicos
 table.title.chemicalComp=List of Components
+
+# DIALOG
+dialog.crateCompQui.title=Create Chemical Component
+
+# SELECT 
+select.item.measure.grama=Grams
+select.item.measure.mililitro=Milliliters
+
+# MESSAGE TOAST
+compQuiAlreadyExists=Chemical Component already exists
