--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,6 +2,9 @@ appTitle=Salestem
 appDescription=Salestem
 title=Salestem
 
+# GENERALS
+required.field=Campo obrigat\u00F3rio
+
 # FORM
 form.email=Email
 form.password=Senha
@@ -17,6 +20,7 @@ form.emailRequired=Email \u00E9 obrigat\u00F3rio
 form.usernameRequired=Nome de Usu\u00E1rio \u00E9 obrigat\u00F3rio
 form.passwordRequired=Senha \u00E9 obrigat\u00F3ria
 form.confirmPasswordRequired=Confirma\u00E7\u00E3o de Senha \u00E9 obrigat\u00F3ria
+
 
 # PANEL CONFIGURATIONS
 lblThemeDark=Tema Escuro
@@ -54,6 +58,9 @@ btnClose=Fechar
 btn.create.chemicalComp=Novo Componente Qu\u00EDmico
 btn.sort.table=Ordenar Por
 btn.filter.table=Filtrar Por
+btn.create=Criar
+btn.save=Salvar
+btn.cancel=Cancelar
 
 # NOTFOUND
 notFound=P\u00E1gina n\u00E3o encontrada
@@ -75,6 +82,10 @@ sideBar.chemicalComponents=Componentes Qu\u00EDmicos
 # MESSAGE BOX
 msgBox.invalidTokenTitle=Credenciais inv\u00E1lidas
 msgBox.invalidToken=Ocorreu um erro ao validar suas credenciais, por favor, fa\u00E7a o login novamente.
+msgBox.errorCreateCompQui.title=Erro
+msgBox.errorCreateCompQui.text=Ocorreu um erro ao criar o Componente Qu\u00EDmico, por favor, tente novamente.
+msgBox.successCreateCompQui.title=Sucesso
+msgBox.successCreateCompQui.text=O Componente Qu\u00EDmico foi criado com sucesso.
 
 # SEARCH FIELD
 searchField.placeholder=Filtre pelo nome do Componente
@@ -83,5 +94,16 @@ searchField.placeholder=Filtre pelo nome do Componente
 table.noData.chemicalComp=Sem Componentes Qu\u00EDmicos
 table.column.chemicalComp.name=Nome do Componente
 table.column.chemicalComp.formula=F\u00F3rmula
+table.column.chemicalComp.formaMedida=Forma de Medida
 clearAllFilters=Limpar todos os filtros
 table.title.chemicalComp=Lista dos Componentes
+
+# DIALOG
+dialog.crateCompQui.title=Novo Componente Qu\u00EDmico
+
+# SELECT 
+select.item.measure.grama=Gramas
+select.item.measure.mililitro=Mililitros
+
+# MESSAGE TOAST
+compQuiAlreadyExists=Este Componente Qu\u00EDmico j\u00E1 existe
