Alterando a tabela e ajustando as funções e separando os modelsViews

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -88,7 +88,7 @@ msgBox.successCreateCompQui.title=Sucesso
 msgBox.successCreateCompQui.text=O Componente Qu\u00EDmico foi criado com sucesso.
 
 # SEARCH FIELD
-searchField.placeholder=Filtre pelo nome do Componente
+searchField.placeholder=Ex.: \u00C1cido Ac\u00E9tico
 
 # TABLE
 table.noData.chemicalComp=Sem Componentes Qu\u00EDmicos
@@ -96,7 +96,7 @@ table.column.chemicalComp.name=Nome do Componente
 table.column.chemicalComp.formula=F\u00F3rmula
 table.column.chemicalComp.formaMedida=Forma de Medida
 clearAllFilters=Limpar todos os filtros
-table.title.chemicalComp=Lista dos Componentes
+table.title.chemicalComp=Lista de Componentes
 
 # DIALOG
 dialog.crateCompQui.title=Novo Componente Qu\u00EDmico
