--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -83,7 +83,8 @@ msgBox.invalidTokenTitle=Invalid credentials
 msgBox.invalidToken=Invalid credentials, please login again.
 
 # SEARCH FIELD
-searchField.placeholder=Filter by name of the Component
+# searchField.placeholder=Filter by name of the Component
+searchField.placeholder=E.g.: Acetic Acid
 
 # TABLE
 table.noData.chemicalComp=No Chemical Components
@@ -91,7 +92,6 @@ table.column.chemicalComp.name=Name of the component
 table.column.chemicalComp.formula=Formula
 table.column.chemicalComp.formaMedida=Measure form
 clearAllFilters=Clear all filters
-# table.title.chemicalComp=Lista de Componentes Qu\u00EDmicos
 table.title.chemicalComp=List of Components
 
 # DIALOG
