Implementado a edição e remoção dos Comp. Quí.

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -52,6 +52,9 @@ btn.filter.table=Filter By
 btn.create=Create
 btn.save=Save
 btn.cancel=Cancel
+btn.rowsActions=Actions
+btn.deleteItem=Delete
+btn.editItem=Edit
 
 # NOTFOUND PAGE
 notFound=Not Found
@@ -77,6 +80,7 @@ sideNavigationToggleButtonTooltipCollapsed=Expand menu
 sideNavigationToggleButtonTooltipExpanded=Collapse menu
 sideBar.home=Home
 sideBar.chemicalComponents=Chemical Components
+sideBar.inpOutCompQui=Input and Output of Chemical Components
 
 # MESSAGE BOX
 msgBox.invalidTokenTitle=Invalid credentials
@@ -88,14 +92,17 @@ searchField.placeholder=E.g.: Acetic Acid
 
 # TABLE
 table.noData.chemicalComp=No Chemical Components
-table.column.chemicalComp.name=Name of the component
+table.column.chemicalComp.name=Component
 table.column.chemicalComp.formula=Formula
-table.column.chemicalComp.formaMedida=Measure form
+table.column.chemicalComp.formaMedida=Measure
 clearAllFilters=Clear all filters
 table.title.chemicalComp=List of Components
+table.title.inpOutCompQui=Input and Output List
+
 
 # DIALOG
 dialog.crateCompQui.title=Create Chemical Component
+dialog.editCompQui.title=Edit Chemical Component
 
 # SELECT 
 select.item.measure.grama=Grams
