--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -61,6 +61,9 @@ btn.filter.table=Filtrar Por
 btn.create=Criar
 btn.save=Salvar
 btn.cancel=Cancelar
+btn.rowsActions=A\u00E7\u00F5es
+btn.deleteItem=Remover
+btn.editItem=Editar
 
 # NOTFOUND
 notFound=P\u00E1gina n\u00E3o encontrada
@@ -78,6 +81,7 @@ sideNavigationToggleButtonTooltipCollapsed=Expandir menu
 sideNavigationToggleButtonTooltipExpanded=Recolher menu
 sideBar.home=P\u00E1gina Inicial
 sideBar.chemicalComponents=Componentes Qu\u00EDmicos
+sideBar.inpOutCompQui=Entrada e Sa\u00EDda de Componentes Qu\u00EDmicos
 
 # MESSAGE BOX
 msgBox.invalidTokenTitle=Credenciais inv\u00E1lidas
@@ -92,14 +96,15 @@ searchField.placeholder=Ex.: \u00C1cido Ac\u00E9tico
 
 # TABLE
 table.noData.chemicalComp=Sem Componentes Qu\u00EDmicos
-table.column.chemicalComp.name=Nome do Componente
+table.column.chemicalComp.name=Componente
 table.column.chemicalComp.formula=F\u00F3rmula
-table.column.chemicalComp.formaMedida=Forma de Medida
+table.column.chemicalComp.formaMedida=Medida
 clearAllFilters=Limpar todos os filtros
 table.title.chemicalComp=Lista de Componentes
-
+table.title.inpOutCompQui=Lista de Entrada e Sa\u00EDda
 # DIALOG
 dialog.crateCompQui.title=Novo Componente Qu\u00EDmico
+dialog.editCompQui.title=Editar Componente Qu\u00EDmico
 
 # SELECT 
 select.item.measure.grama=Gramas
