Adicionando o model da tela Inicial de entrada e saída

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -80,7 +80,7 @@ sideNavigationToggleButtonTooltipCollapsed=Expand menu
 sideNavigationToggleButtonTooltipExpanded=Collapse menu
 sideBar.home=Home
 sideBar.chemicalComponents=Chemical Components
-sideBar.inpOutCompQui=Input and Output of Chemical Components
+sideBar.inpOutCompQui=Home
 
 # MESSAGE BOX
 msgBox.invalidTokenTitle=Invalid credentials
