--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -81,7 +81,7 @@ sideNavigationToggleButtonTooltipCollapsed=Expandir menu
 sideNavigationToggleButtonTooltipExpanded=Recolher menu
 sideBar.home=P\u00E1gina Inicial
 sideBar.chemicalComponents=Componentes Qu\u00EDmicos
-sideBar.inpOutCompQui=Entrada e Sa\u00EDda de Componentes Qu\u00EDmicos
+sideBar.inpOutCompQui=P\u00E1gina Inicial
 
 # MESSAGE BOX
 msgBox.invalidTokenTitle=Credenciais inv\u00E1lidas
