--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -44,8 +44,8 @@ register.subTitle=Please fill in the fields below to create your account.
 btnConfigurations=Configurations
 btnLogout=Logout
 btnDownloadPWA=Install Salestem
-btnSave=Save
-btnClose=Close
+btn.save=Save
+btn.close=Close
 btn.create.chemicalComp=New Chemical Component
 btn.sort.table=Order By
 btn.filter.table=Filter By
@@ -55,6 +55,7 @@ btn.cancel=Cancel
 btn.rowsActions=Actions
 btn.deleteItem=Delete
 btn.editItem=Edit
+btn.create.registerInpOut=Novo Registro
 
 # NOTFOUND PAGE
 notFound=Not Found
@@ -98,15 +99,25 @@ table.column.chemicalComp.formaMedida=Measure
 clearAllFilters=Clear all filters
 table.title.chemicalComp=List of Components
 table.title.inpOutCompQui=Input and Output List
-
+table.column.inpOut.type=Type
+table.column.inpOut.input=Input
+table.column.inpOut.output=Output
+table.column.inpOut.date=Date
+table.column.inpOut.quantity=Quantity
+table.column.inpOut.observations=Observations
 
 # DIALOG
 dialog.crateCompQui.title=Create Chemical Component
 dialog.editCompQui.title=Edit Chemical Component
+dialog.createInpOut.title=New Record
+dialog.editInpOut.title=Edit Record
 
 # SELECT 
-select.item.measure.grama=Grams
-select.item.measure.mililitro=Milliliters
+select.item.measure.grama=Grams (g)
+select.item.measure.mililitro=Milliliters (ml)
 
 # MESSAGE TOAST
 compQuiAlreadyExists=Chemical Component already exists
+
+# PLACEHOLDER
+placeHolder.inpOut.observations=E.g.: Observations about the record, such as the reason for the entry or exit of the component.
