--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -53,8 +53,8 @@ register.loginAccount=Entrar na minha conta
 btnConfigurations=Configura\u00E7\u00F5es
 btnLogout=Sair
 btnDownloadPWA=Instalar o Salestem
-btnSave=Salvar
-btnClose=Fechar
+btn.save=Salvar
+btn.close=Fechar
 btn.create.chemicalComp=Novo Componente Qu\u00EDmico
 btn.sort.table=Ordenar Por
 btn.filter.table=Filtrar Por
@@ -64,6 +64,7 @@ btn.cancel=Cancelar
 btn.rowsActions=A\u00E7\u00F5es
 btn.deleteItem=Remover
 btn.editItem=Editar
+btn.create.registerInpOut=Novo Registro
 
 # NOTFOUND
 notFound=P\u00E1gina n\u00E3o encontrada
@@ -102,13 +103,23 @@ table.column.chemicalComp.formaMedida=Medida
 clearAllFilters=Limpar todos os filtros
 table.title.chemicalComp=Lista de Componentes
 table.title.inpOutCompQui=Lista de Entrada e Sa\u00EDda
+table.column.inpOut.type=Tipo do Registro
+table.column.inpOut.input=Entrada
+table.column.inpOut.output=Sa\u00EDda
+table.column.inpOut.date=Data
+table.column.inpOut.quantity=Quantidade
+table.column.inpOut.observations=Observa\u00E7\u00F5es
+
 # DIALOG
 dialog.crateCompQui.title=Novo Componente Qu\u00EDmico
 dialog.editCompQui.title=Editar Componente Qu\u00EDmico
 
 # SELECT 
-select.item.measure.grama=Gramas
-select.item.measure.mililitro=Mililitros
+select.item.measure.grama=Gramas (g)
+select.item.measure.mililitro=Mililitros (ml)
 
 # MESSAGE TOAST
 compQuiAlreadyExists=Este Componente Qu\u00EDmico j\u00E1 existe
+
+# PLACEHOLDER
+placeHolder.inpOut.observations=Ex.: Observa\u00E7\u00F5es sobre o registro, como o motivo da entrada ou sa\u00EDda do componente.
