Ajustando o ícone do searchHelp e o Nome da APlicação

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,6 +1,6 @@
-appTitle=Salestem
-appDescription=Salestem
-title=Salestem
+appTitle=Farmtenz
+appDescription=Farmtenz
+title=Farmtenz
 
 # GENERALS
 required.field=Campo obrigat\u00F3rio
@@ -52,7 +52,7 @@ register.loginAccount=Entrar na minha conta
 # BUTTONS
 btnConfigurations=Configura\u00E7\u00F5es
 btnLogout=Sair
-btnDownloadPWA=Instalar o Salestem
+btnDownloadPWA=Instalar o Farmtenz
 btn.save=Salvar
 btn.close=Fechar
 btn.create.chemicalComp=Novo Componente Qu\u00EDmico
