--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -1,6 +1,6 @@
-appTitle=Salestem
-appDescription=Salestem
-title=Salestem
+appTitle=Farmtenz
+appDescription=Farmtenz
+title=Farmtenz
 
 # GENERALS
 required.field=Required field
@@ -43,7 +43,7 @@ register.subTitle=Please fill in the fields below to create your account.
 # BUTTONS
 btnConfigurations=Configurations
 btnLogout=Logout
-btnDownloadPWA=Install Salestem
+btnDownloadPWA=Install Farmtenz
 btn.save=Save
 btn.close=Close
 btn.create.chemicalComp=New Chemical Component
