Ajustando as traduções de noData das tabelas e adicionando uma mensagem de Erro no Login

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -17,6 +17,9 @@ form.emailInvalid=Invalid email address
 form.usernameInvalid=Nome de Usu\u00E1rio inv\u00E1lido, deve conter no m\u00EDnimo 3 caracteres
 form.passwordInvalid=Invalid password, must contain at least 8 characters
 
+login_form_fields_error=Please fill in all fields.
+login_form_error=An error occurred while logging in, please try again.
+
 form.emailRequired=Email is required
 form.usernameRequired=Username is required
 form.passwordRequired=Password is required
@@ -105,6 +108,8 @@ table.column.inpOut.output=Output
 table.column.inpOut.date=Date
 table.column.inpOut.quantity=Quantity
 table.column.inpOut.observations=Observations
+# table.noData=Sem Dados
+table.noData=No Data
 
 # DIALOG
 dialog.crateCompQui.title=Create Chemical Component
@@ -112,7 +117,7 @@ dialog.editCompQui.title=Edit Chemical Component
 dialog.createInpOut.title=New Record
 dialog.editInpOut.title=Edit Record
 
-# SELECT 
+# SELECT
 select.item.measure.grama=Grams (g)
 select.item.measure.mililitro=Milliliters (ml)
 
