--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -21,6 +21,9 @@ form.usernameRequired=Nome de Usu\u00E1rio \u00E9 obrigat\u00F3rio
 form.passwordRequired=Senha \u00E9 obrigat\u00F3ria
 form.confirmPasswordRequired=Confirma\u00E7\u00E3o de Senha \u00E9 obrigat\u00F3ria
 
+login_form_fields_error=Por favor, preencha todos os campos.
+login_form_error=Ocorreu um erro ao fazer o login, por favor, tente novamente.
+
 
 # PANEL CONFIGURATIONS
 lblThemeDark=Tema Escuro
@@ -109,12 +112,14 @@ table.column.inpOut.output=Sa\u00EDda
 table.column.inpOut.date=Data
 table.column.inpOut.quantity=Quantidade
 table.column.inpOut.observations=Observa\u00E7\u00F5es
+table.noData.inpOutCompQui=Sem Registros de Entrada e Sa\u00EDda
+table.noData=Sem Dados
 
 # DIALOG
 dialog.crateCompQui.title=Novo Componente Qu\u00EDmico
 dialog.editCompQui.title=Editar Componente Qu\u00EDmico
 
-# SELECT 
+# SELECT
 select.item.measure.grama=Gramas (g)
 select.item.measure.mililitro=Mililitros (ml)
 
