--- a/webapp/i18n/i18n_pt_BR.properties
+++ b/webapp/i18n/i18n_pt_BR.properties
@@ -128,3 +128,6 @@ compQuiAlreadyExists=Este Componente Qu\u00EDmico j\u00E1 existe
 
 # PLACEHOLDER
 placeHolder.inpOut.observations=Ex.: Observa\u00E7\u00F5es sobre o registro, como o motivo da entrada ou sa\u00EDda do componente.
+
+dialog.createInpOut.title=Novo Registro
+dialog.editInpOut.title=Editar Registro
